// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|UserProfile Default 1`] = `
.c3 {
  height: 155px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c4 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c6 {
  width: calc(50% - 5px);
}

.c2 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c2:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c6 {
    width: 23.5%;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@media (min-width:1040px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="firstName"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            First Name
          </label>
          <input
            disabled={true}
            id="firstName"
            name="firstName"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="lastName"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Last Name
          </label>
          <input
            disabled={true}
            id="lastName"
            name="lastName"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="email"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Email
          </label>
          <input
            disabled={true}
            id="email"
            name="email"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="role"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Role
          </label>
          <input
            disabled={true}
            id="role"
            name="role"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="editor"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="c1"
      >
        <span
          className="c2"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Remove user
          </span>
        </span>
      </div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <button
              className="c6"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                }
              }
              type="button"
            >
              <span>
                Back
              </span>
            </button>
            <button
              className="c6"
              disabled={false}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#000",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                }
              }
              type="submit"
            >
              Make admin
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Shared Components|UserProfile Project user 1`] = `
.c3 {
  height: 155px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c4 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c6 {
  width: calc(50% - 5px);
}

.c2 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c2:hover {
  border-bottom: 1px solid #FFF;
}

.c1 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (min-width:1040px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c4 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c6 {
    width: 23.5%;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@media (min-width:1040px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="firstName"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            First Name
          </label>
          <input
            disabled={true}
            id="firstName"
            name="firstName"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="lastName"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Last Name
          </label>
          <input
            disabled={true}
            id="lastName"
            name="lastName"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="email"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Email
          </label>
          <input
            disabled={true}
            id="email"
            name="email"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="role"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Role
          </label>
          <input
            disabled={true}
            id="role"
            name="role"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value="editor"
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="c1"
      >
        <span
          className="c2"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Remove user from project
          </span>
        </span>
      </div>
      <div
        className="c3"
      >
        <div
          className="c4"
        >
          <div
            className="c5"
          >
            <button
              className="c6"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                }
              }
              type="button"
            >
              <span>
                Back
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Shared Components|UserProfile User profile 1`] = `
.c1 {
  padding-top: 7px;
}

.c4 {
  height: 155px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c5 {
  position: fixed;
  padding: 40px 0 36px;
  bottom: 0;
  width: calc(100% - 40px);
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c7 {
  width: calc(50% - 5px);
}

.c3 {
  cursor: pointer;
  margin-bottom: 30px;
  color: #FFF;
  -webkit-transition: border 400ms;
  transition: border 400ms;
  border-bottom: 1px solid transparent;
}

.c3:hover {
  border-bottom: 1px solid #FFF;
}

.c2 {
  border-top: 2px solid #2F2F36;
  padding-top: 35px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

@media (min-width:1040px) {
  .c6 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1040px) {
  .c5 {
    width: 1000px;
  }
}

@media (min-width:1040px) {
  .c7 {
    width: 23.5%;
    -webkit-transform: translateX(0);
    -ms-transform: translateX(0);
    transform: translateX(0);
  }
}

@media (min-width:1040px) {
  .c0 {
    margin-top: 70px;
  }
}

<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="c0"
  >
    <form
      className=""
      onSubmit={[Function]}
    >
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="firstName"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            First Name
          </label>
          <input
            disabled={false}
            id="firstName"
            name="firstName"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <div
              className="c1"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="lastName"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Last Name
          </label>
          <input
            disabled={false}
            id="lastName"
            name="lastName"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <div
              className="c1"
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "30px",
                    "width": "30px",
                  }
                }
                viewBox="0 0 30 30"
              >
                <path
                  d="M21.789 10.92a.724.724 0 000-1.022l-1.687-1.687a.724.724 0 00-1.022 0l-1.322 1.322 2.709 2.709 1.322-1.322zM9 18.291V21h2.709l7.992-7.992-2.709-2.71L9 18.292z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className=""
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "maxWidth": "100%",
              "paddingBottom": "30px",
              "position": "relative",
            }
          }
        >
          <label
            htmlFor="email"
            style={
              Object {
                "border": "none",
                "borderTop": "2px solid #2F2F36",
                "color": "#71737e",
                "display": "block",
                "fontSize": "14px",
                "outline": "none",
                "paddingTop": "8px",
                "width": "100%",
              }
            }
          >
            Email
          </label>
          <input
            disabled={true}
            id="email"
            name="email"
            onChange={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "border": "none",
                "color": "#FFF",
                "fontSize": "18px",
                "lineHeight": "24px",
                "outline": "none",
              }
            }
            type="text"
            value=""
          />
          <div
            style={
              Object {
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />
        </div>
      </div>
      <div
        className="c2"
      >
        <span
          className="c3"
          onClick={[Function]}
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "14px",
            }
          }
        >
          <span>
            Reset password
          </span>
        </span>
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <button
              className="c7"
              disabled={false}
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#FFF",
                  "cursor": "pointer",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                }
              }
              type="button"
            >
              <span>
                Back
              </span>
            </button>
            <button
              className="c7"
              disabled={true}
              style={
                Object {
                  "backgroundColor": "#1d1d20",
                  "border": "none",
                  "borderRadius": "48px",
                  "color": "#71737e",
                  "cursor": "default",
                  "display": "inline-block",
                  "fill": "#FFF",
                  "fontSize": "18px",
                  "margin": "0",
                  "minHeight": "48px",
                  "outline": "none",
                  "padding": "0",
                }
              }
              type="submit"
            >
              Save
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
